[package]
name = "pay_webhook"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aok = "0.1.11"
axum = "0.7.5"
genv = "0.1.7"
tokio = { version = "1.37.0", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "time",
  "sync",
] }
loginit = "0.1.10"
pay_db = { path = "../srv/mod/pub/pay_db" }
t3 = "0.1.7"
static_init = "1.0.3"
async-stripe = { version = "0.34.1", features = ["runtime-tokio-hyper-rustls"] }
re = "0.1.5"
xerr = "0.1.11"
paste = "1.0.14"
tracing = "0.1.40"
futures = "0.3.30"
const-str = "0.5.7"
ping_ver = "0.1.3"
jemallocator = "0.5.4"

[profile.release]
lto = true
opt-level = 3
incremental = true
codegen-units = 1
overflow-checks = false
panic = 'abort'
debug-assertions = false
strip = true

[profile.dev]
split-debuginfo = "unpacked"

[target.'cfg(target_os = "macos")'.rust]
linker = "/opt/homebrew/opt/llvm/bin/lld"

[build]
rustflags = ["-Z", "threads=8"]